--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,7 @@ target_link_libraries(test_dlist ${DEP_LIB})
 
 add_executable(test_array ./test/test_array.c)
 target_link_libraries(test_array ${DEP_LIB})
+
+add_executable(test_disorder ./test/test_disorder.c)
+target_link_libraries(test_disorder ${DEP_LIB})
+
